--- a/documentos/templates/mensagem_certificados.html
+++ b/documentos/templates/mensagem_certificados.html
@@ -178,4 +178,4 @@
 
 %0D%0A%0D%0A
 {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20%20%20%20%20{% endif %}
-atenciosamente,%20{{configuracao.coordenacao.coordenador_email}}%20(coordenação%20PFE)
+atenciosamente,%20{{configuracao.coordenacao.coordenador_email}}%20(coordenação%Capstone)
