--- a/documentos/templates/documentos/materias_midia.html
+++ b/documentos/templates/documentos/materias_midia.html
@@ -108,7 +108,7 @@
                   {% if relatorio.documento%}
                     <a class="btn btn-light btn-outline-info btn-sm" 
                       href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
-                      <span class="full-text" style="width: 9em;">Cópia no Serv. PFE</span>
+                      <span class="full-text" style="width: 9em;">Cópia no Servidor</span>
                       <span class="short-text" style="width: 3em;">Cópia</span>
                     </a>
                   {% endif %}
