--- a/documentos/templates/documentos/relatorios_publicos.html
+++ b/documentos/templates/documentos/relatorios_publicos.html
@@ -154,8 +154,8 @@
                   {% if relatorio.documento %}
                     <a class="btn btn-light btn-outline-info btn-sm"
                       href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
-                      <span class="short-text" style="width: 4em;">Serv. PFE</span>
-                      <span class="full-text" style="width: 12em;">Link&nbsp;alternativo&nbsp;(Serv. PFE)</span>
+                      <span class="short-text" style="width: 4em;">Servidor</span>
+                      <span class="full-text" style="width: 12em;">Link&nbsp;alternativo&nbsp;(Servidor)</span>
                     </a>
                   {% endif %}
               </td>
