--- a/estudantes/templates/estudantes/alinhamentos_gerais.html
+++ b/estudantes/templates/estudantes/alinhamentos_gerais.html
@@ -21,7 +21,7 @@
 <br>
 
 <div class="div_arredondado pintern">
-  <h5><a href="https://forms.gle/3Qong25KnCYX9QWs9">Levantamento de Expectativa do PFE</a></h5>
+  <h5><a href="https://forms.gle/3Qong25KnCYX9QWs9">Levantamento de Expectativa do Capstone</a></h5>
 </div>
 
 <div class="div_arredondado pintern">
