--- a/estudantes/templates/estudantes/selecao_propostas.html
+++ b/estudantes/templates/estudantes/selecao_propostas.html
@@ -49,7 +49,7 @@
     {% else %}
 
       {% if ano != user.aluno.anoPFE or semestre != user.aluno.semestrePFE %}
-        <h2 class="red-bold">Você não está registrado para o PFE em {{ano}}.{{semestre}}</h2>
+        <h2 class="red-bold">Você não está registrado para o Capstone em {{ano}}.{{semestre}}</h2>
         <h3 class="red-bold">Caso acredite que existe algum erro na informação, por favor contactar a coordenação do PFE</h3>
         <br>
       {% endif %}
