--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -7,7 +7,7 @@
 
 {% block content %}
   <br>
-  <a href="{% url 'avisos_listar' %}"><h5>Agenda do PFE</h5></a>
+  <a href="{% url 'avisos_listar' %}"><h5>Agenda</h5></a>
   <a href="{% url 'emails' %}"><h5>Listas de e-mails</h5></a>
 
   <hr>
