--- a/professores/templates/professores/relato_avaliar.html
+++ b/professores/templates/professores/relato_avaliar.html
@@ -121,7 +121,7 @@
 
     <label for="observacoes">Informe suas observações para a coordenação do Capstone.</label><br>
     <textarea id="observacoes" name="observacoes" rows="18" cols="164" maxlength="{% max_length Observacao 'observacoes_orientador' %}" {% if not editor %}disabled{% endif %}
-              placeholder="Caso identifique alguma dificuldade com qualquer estudante ou o grupo, descreva aqui que a coordenação do PFE irá lhe auxiliar.">{% if observacoes %}{{observacoes}}{% endif %}</textarea>
+              placeholder="Caso identifique alguma dificuldade com qualquer estudante ou o grupo, descreva aqui que a coordenação do Capstone irá lhe auxiliar.">{% if observacoes %}{{observacoes}}{% endif %}</textarea>
 
     <p>&nbsp;</p>
 
